force-app/main/default/objects/SLA_Violation__c/SLA_Violation__c.object-meta.xml
<CustomObject>
    <label>SLA Violation</label>
    <nameField>
        <label>SLA Violation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Violation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>