force-app/main/default/objects/SLA_Violation__c/fields/DP_USER_SLA__c.field-meta.xml
<CustomField>
    <fullName>DP_USER_SLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DP USER SLA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SLA_Violation</relationshipName>
    <type>Lookup</type>
</CustomField>