force-app/main/default/objects/SLA_Violation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SLA Violation</relationshipLabel>
    <relationshipName>SLA_Violation</relationshipName>
    <type>Lookup</type>
</CustomField>