force-app/main/default/objects/SLA_Violation__c/fields/SLA_Datenew__c.field-meta.xml
<CustomField>
    <fullName>SLA_Datenew__c</fullName>
    <label>SLA Date</label>
    <type>DateTime</type>
</CustomField>